--- a/cimfs/Cargo.toml
+++ b/cimfs/Cargo.toml
@@ -13,9 +13,11 @@ windows = { version = "0.48.0", features = [
     "Win32_System_IO",
     "Win32_System_Threading",
     "Win32_Security_Authorization",
+    "Win32_System_Rpc",
 ] }
 cimfs-sys = { path = "../cimfs-sys" }
 tokio = "1.28.2"
 bytes = "1.4.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
+clap = { version = "4.3.2", features = ["derive"] }
