--- a/cimfs/Cargo.toml
+++ b/cimfs/Cargo.toml
@@ -21,3 +21,4 @@ bytes = "1.4.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 tracing = "0.1.37"
 clap = { version = "4.3.2", features = ["derive"] }
+tracing-test = "0.2.4"
