--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust-Binary-Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "release" ]
     tags: v*
 env:
   CARGO_TERM_COLOR: always
