--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [ 'build' ]
     if: startsWith(github.ref, 'refs/tags/release')
     steps:
       - name: Download Artifacts
