--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust-Binary-Build
 
 on:
   push:
-    branches: [ "main", "release" ]
+    branches: [ "main" ]
     tags:
     - v*
     - release/*
